# aptos-core

./: Cargo.toml  README.md
.github/workflows/: lint-test.yaml
api/goldens/: aptos_api__tests__transactions_test__test_get_transactions_output_user_transaction_with_script_function_payload.json  aptos_api__tests__transactions_test__test_get_transactions_returns_last_page_when_start_version_is_not_specified.json
aptos-move/e2e-tests/goldens/: language_e2e_testsuite__tests__on_chain_configs__drop_txn_after_reconfiguration_version_4.exp  language_e2e_testsuite__tests__on_chain_configs__initial_aptos_version_version_4.exp
aptos-move/framework/aptos-framework/sources/: Block.move
aptos-move/framework/aptos-framework/sources/configs/: Stake.move
aptos-node/src/: lib.rs
config/src/config/: mod.rs
consensus/src/: counters.rs  lib.rs
crates/aptos-telemetry/: Cargo.toml
crates/aptos-workspace-hack/: Cargo.toml
crates/aptos/src/genesis/: config.rs
ecosystem/node-checker/: .gitignore  Cargo.toml  DEV_NOTES.md  README.md  openapi.json  openapi.yaml
ecosystem/node-checker/src/: args.rs  build_evaluators.rs  main.rs  public_types.rs
ecosystem/node-checker/src/metric_collector/: common.rs  mod.rs  reqwest_metric_collector.rs  traits.rs
ecosystem/node-checker/src/metric_evaluator/: common.rs  mod.rs  state_sync_evaluator.rs  traits.rs
ecosystem/node-checker/src/runner/: blocking_runner.rs  mod.rs  traits.rs
ecosystem/platform/server/app/controllers/: welcome_controller.rb
ecosystem/typescript/sdk/examples/javascript/: bcs_transaction.js  multisig_transactiond.js
ecosystem/typescript/sdk/examples/typescript/: bcs_transaction.ts  multisig_transactiond.ts
mempool/src/: lib.rs
terraform/helm/validator/: values.yaml
