[package]
name = "aptos-node-checker"
version = "0.1.0"
description = "Aptos Node Health Checker"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2018"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
clap = "3.1.17"
env_logger = "0.9"
futures = "0.3.21"
log = "0.4"
once_cell = "1.10.0"
poem = { git = "https://github.com/banool/poem", branch = "add_yaml_spec" }
poem-openapi = { git = "https://github.com/banool/poem", features = ["swagger-ui", "rapidoc", "redoc"], branch = "add_yaml_spec"}
prometheus-parse = "0.2.2"
reqwest = "0.11.10"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
url = "2.2.2"

# These deps are commented out while I wait for some PRs to get merged into poem.
# poem = "1.3.30"
# poem-openapi = { version = "2.0.0", features = ["swagger-ui"]}

aptos-logger = { path = "../../crates/aptos-logger" }
aptos-metrics = { path = "../../crates/aptos-metrics" }
aptos-rest-client = { path = "../../crates/aptos-rest-client" }
aptos-workspace-hack = { path = "../../crates/aptos-workspace-hack" }

[[bin]]
name = "aptos-node-checker"